# uartterm

./: .gitignore  README.md  README_uart_terminal.md  build.sh  install.sh  pyproject.toml  uartterm  uartterm.spec
src/uartterm/: cli.py
