[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uartterm"
version = "0.1.0"
description = "macOS terminal-based UART terminal"
requires-python = ">=3.10"

[project.scripts]
uartterm = "uartterm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]